--- a/components/MyWork/MyWork.module.scss
+++ b/components/MyWork/MyWork.module.scss
@@ -1,10 +1,16 @@
+@import './styles/mixins';
+
 .myWork {
 
 }
 
 .myWorkRow {
   display: grid;
-  grid-template-areas: 'A B';
+  grid-template-columns: repeat(2, 1fr);
   gap: 40px 20px;
+  
+  @include breakpoint(mobile) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
