--- a/components/SideMenu/SideMenu.module.scss
+++ b/components/SideMenu/SideMenu.module.scss
@@ -1,9 +1,69 @@
-.sideMenuWrapper {
-  position: fixed;
-  left: 10%;
-  width: 20%;
-  min-height: 100vh;
-  background-color: #a43f49;
+@import './styles/mixins';
+.sideMenu {
+  position: relative;
+  .sideMenuWrapper {
+    position: fixed;
+    left: 10%;
+    width: 20%;
+    min-height: 100vh;
+    background-color: #a43f49;
+    z-index: 99;
+    transition: transform 233ms cubic-bezier(0, 0, 0.21, 1), -webkit-transform 233ms cubic-bezier(0, 0, 0.21, 1);
+    transform: translateX(0);
+
+    @include breakpoint(mobileTablet) {
+      left: 0;
+      width: 100%;
+      max-width: 320px;
+    }
+
+    @include breakpoint(onlyDesktop) {
+      left: 0;
+      width: 25%;
+    }
+  }
+
+  .menuCloseButton {
+    display: none;
+
+    @include breakpoint(mobileTablet) {
+      display: inline-block;
+      cursor: pointer;
+      color: #a43f49;
+      background-color: #fff;
+      width: 100%;
+      height: 60px;
+      text-align: center;
+      line-height: 60px;
+    }
+  }
+
+  .menuOpenButton {
+    display: none;
+
+    @include breakpoint(mobileTablet) {
+      display: inline-block;
+      z-index: 98;
+      cursor: pointer;
+      position: fixed;
+      top: 0;
+      left: 0;
+      color: #a43f49;
+      background-color: #fff;
+      width: 60px;
+      height: 60px;
+      text-align: center;
+      line-height: 60px;
+      box-shadow: 0 0 10px rgba(20, 7, 7, 0.5);
+    }
+  }
+
+  .sideMenuClose {
+    @include breakpoint(mobileTablet) {
+      transform: translateX(-100%);
+      transition: transform 233ms cubic-bezier(0, 0, 0.21, 1), -webkit-transform 233ms cubic-bezier(0, 0, 0.21, 1);
+    }
+  }
 }
 
 .sideMenuCopyright {
