--- a/components/MyWork/MyWork.module.scss
+++ b/components/MyWork/MyWork.module.scss
@@ -6,11 +6,17 @@
 
 .myWorkRow {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 40px 20px;
   
   @include breakpoint(mobile) {
     grid-template-columns: repeat(1, 1fr);
   }
+}
+
+.buttonWrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
 }
 
