--- a/components/MyWork/MyWorkItem/MyWorkItem.module.scss
+++ b/components/MyWork/MyWorkItem/MyWorkItem.module.scss
@@ -6,20 +6,19 @@
   figure {
     margin: 0;
     overflow: hidden;
-    perspective: 50em;
+    position: relative;
     height: 100%;
     width: 100%;
     &::before {
       @include pseudo-element;
-      background-color: #ffffff;
+      background-color: rgba(250,250,250,0.8);
       top: 20px;
       left: 20px;
       right: 20px;
       bottom: 20px;
-      transition: all 0.4s ease-in-out;
-      transform-origin: 50% 50%;
-      transform: rotateX(-90deg);
-      opacity: 0;
+      transition: opacity 0.4s ease-in-out;
+      z-index: 20;
+      box-shadow: 0 0 30px rgba(129, 127, 127, 0.5);
     }
     figcaption {
       left: 20%;
@@ -27,9 +26,8 @@
       top: 50%;
       position: absolute;
       text-align: center;
-      opacity: 0;
-      z-index: 1;
-      transition: all 0.2s ease-out;
+      z-index: 21;
+      transition: transform 0.2s ease-out;
     }
   }
   &:hover {
@@ -50,36 +48,26 @@
     height: 100%;
     border-radius: 5px;
     transition: all 0.2s ease-out;
+    filter: blur(2px);
+    backdrop-filter: invert(1);
   }
 
   h4 {
-    margin-top: 15px;
+    margin-top: 0;
     margin-bottom: 5px;
     color: #232323;
-    font-size: 26px;
+    font-size: 20px;
     font-weight: 700;
     letter-spacing: 0.25px;
   }
   a {
-    position: relative;
+    display: block;
     font-size: 18px;
-    background-color: #a43f49;
-    width: 40px;
-    height: 40px;
-    display: inline-block;
-    text-align: center;
-    line-height: 40px;
-    border-radius: 5px;
-    color: #fff;
+    font-style: italic;
+    color: #a43f49;
     text-decoration: none;
     &:hover {
-      background-color: #973b44;
+      color: #6a6969;
     }
-  }
-  span {
-    display: block;
-    font-size: 14px;
-    font-style: italic;
-    color: #7a7a7a;
   }
 }
