--- a/components/Skills/Skills.module.scss
+++ b/components/Skills/Skills.module.scss
@@ -43,3 +43,29 @@
     }
   }
 }
+
+.buttonWrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+
+  button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #fff;
+    color: #a43f49;
+    font-size: 12px;
+    font-weight: 800;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    transition: all 0.5s;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    &:hover {
+      outline: none;
+      background-color: #a43f49;
+      color: #fff;
+    }
+  }
+}
