--- a/components/MyWork/MyWorkItem/MyWorkItem.module.scss
+++ b/components/MyWork/MyWorkItem/MyWorkItem.module.scss
@@ -7,7 +7,7 @@
     margin: 0;
     overflow: hidden;
     position: relative;
-    height: 100%;
+    height: 255px;
     width: 100%;
     &::before {
       @include pseudo-element;
