--- a/components/Posts/PostItem/PostItem.module.scss
+++ b/components/Posts/PostItem/PostItem.module.scss
@@ -2,8 +2,8 @@
 
 .postItem {
   display: grid;
-  grid-template-areas: 'image content';
-  column-gap: 30px;
+  grid-template-areas: 'date content';
+  column-gap: 45px;
   border-bottom: 1px solid rgba(250, 250, 250, 0.1);
   padding-bottom: 60px;
   &:last-child {
@@ -11,7 +11,7 @@
     padding-bottom: 0;
   }
   &:nth-child(2n) {
-    grid-template-areas: 'content image';
+    grid-template-areas: 'content date';
   }
 
   @include breakpoint(mobile) {
@@ -22,19 +22,15 @@
   }
 }
 
-.postImageWrapper {
-  grid-area: image;
-  
+.postDate {
+  grid-area: date;
+  color: #fff;
+  font-size: 55px;
+  align-self: center;
+
   @include breakpoint(mobile) {
     grid-area: auto;
     margin: 0 auto;
-  }
-
-  img {
-    width: 100%;
-    max-width: 400px;
-    border-radius: 5px;
-    overflow: hidden
   }
 }
 
@@ -51,7 +47,7 @@
   font-size: 26px;
   font-weight: 700;
   padding: 0;
-  margin: 0;
+  margin: 0 0 5px 0;
   color: #fff;
   letter-spacing: 0.25px;
 }
@@ -63,6 +59,28 @@
   color: #fff;
 }
 
+.postSkills {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 45px;
+}
+
+.postSkillsItem {
+  color: #fff;
+  font-size: 14px;
+  display: inline-block;
+  padding: 5px 15px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  background-color: #fff3;
+  margin: 0 10px 10px 0;
+  transition: background-color .5s;
+  cursor: pointer;
+  &:hover {
+    background-color: #fff1;
+  }
+}
+
 .postContentSite a {
   font-size: 16px;
   line-height: 24px;
@@ -71,13 +89,6 @@
   &:hover {
     color: #fff;
   }
-}
-
-.postContentYears {
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 24px;
-  color: #fff;
 }
 
 .postContentLink {
