--- a/components/Posts/PostItem/PostItem.module.scss
+++ b/components/Posts/PostItem/PostItem.module.scss
@@ -53,6 +53,9 @@
 }
 
 .postContentText {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   font-size: 16px;
   line-height: 24px;
   margin-top: 20px;
